# harness

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
harness/: main.py
harness/agent/memory/: base.py  in_memory.py
harness/agent/orchestrator/: orchestrator.py
harness/agent/planners/: base.py  function_calling.py
harness/core/: config.py  exceptions.py  logging.py
harness/mcp/clients/: base.py  http_client.py  session.py  stdio_client.py
harness/mcp/registry/: registry.py
harness/prompts/: system.md
harness/schemas/: chat.py  skill.py  tool.py
harness/skills/: base.py
harness/skills/registry/: registry.py
harness/tools/: base.py  builtin.py  registry.py
tests/: conftest.py  test_builtin_tools.py  test_config.py  test_exceptions.py  test_function_calling_planner.py  test_in_memory.py  test_logging.py  test_mcp_registry.py  test_orchestrator.py  test_schemas.py  test_session_client.py  test_skill_registry.py  test_tool_registry.py
